2007-09-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	Add line_break section.

	* data/glade/text-assistant-line-break-options-page.glade:
	* data/glade/text-assistant-line-break-page.glade:
	* gaupol/gtk/assistants/text/line.py:
	New files for a text assistant line-break task.

	* gaupol/gtk/assistants/text/assistant.py:
	Allow non-task pages and add line-break pages.

	* gaupol/gtk/assistants/text/page.py (correct_texts):
	Remove method as it is not used by all pages.

	* gaupol/gtk/ruler.py (get_length_function):
	New function to replace former useless "func".

2007-09-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.hearing-impaired.in:
	Fine-tune song lyric patterns.

2007-09-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/text.py (break_lines):
	Fix line length calculations.

2007-09-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.common-error.in:
	Add "re" to "Spaces around apostrophes".

	* gaupol/agents/text.py:
	Add break_lines and remove old crap.

	* gaupol/agents/util.py (get_liner):
	New method, equivalent to get_parser.

	* gaupol/liner.py (__init__):
	Add missing clean_func keyword argument.

2007-08-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/liner.py:
	Rewrite to use arbitrary break patterns.
	Clean up code and add comments.

2007-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.line-break.conf:
	* data/patterns/Latn-en.line-break.in:
	* data/patterns/Latn.line-break.conf:
	* data/patterns/Latn.line-break.in:
	New preliminary files for line-break patterns.

	* gaupol/patternman.py (get_patterns):
	Allow patterns with a more specific code to override those with a less
	specific code if the names clash.

2007-08-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/py2exe.bat:
	Copy DLLs from %GTKDIR%\bin.

2007-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/transform.py:
	Do not use DOWNWARDS ARROW WITH CORNER LEFTWARDS in text labels,