@@ -1,5 +1,10 @@
 2007-09-08  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/agents/text.py (break_lines):
+	Fix post-break reduction check.
+
+2007-09-08  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* data/gaupol.gtk.conf.spec:
 	Add line_break section.
 
